--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
-torch
-torchvision
-numpy
-scipy
-pillow
-numpy
-pandas
-matplotlib
-scikit-learn
-scikit-image
-fire
+# Core dependencies
+torch>=2.0.0
+torchvision>=0.15.0
+numpy>=1.22.0
+pillow>=9.0.0
+
+# Image processing and metrics
+scikit-image>=0.19.0
+lpips>=0.1.4
+
+# Training utilities
+tqdm>=4.64.0
+
+# Visualization and logging
+matplotlib>=3.5.0
+wandb>=0.13.0
+seaborn>=0.12.0
+
+# System monitoring
+psutil>=5.9.0
+
+# Optional dependencies
+tensorboard>=2.10.0  # Alternative to wandb
+opencv-python>=4.6.0  # For advanced image processing
